# fotoparadies

./: LICENSE  README.md  fotoparadies.py  main.py  pyproject.toml
fotoparadies/: fotoparadies.py  main.py
